--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
-    "react-native-gesture-handler": "^1.6.1",
+    "react-native-gesture-handler": "~1.6.0",
     "react-native-modalize": "^2.0.6",
     "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
+    "react-native-svg": "12.1.0",
+    "react-native-svg-charts": "^5.4.0",
     "react-native-tab-view": "^2.15.1",
     "react-native-web": "~0.11.7",
     "reanimated-bottom-sheet": "^1.0.0-alpha.22"
